added text navigator and symbol name file

--- a/StringAnalyzer/StringAnalyzer.csproj
+++ b/StringAnalyzer/StringAnalyzer.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="data\symbols.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="data\symbols.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
