--- a/StringAnalyzer/TextAnalyzer.csproj
+++ b/StringAnalyzer/TextAnalyzer.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>img\textanalyzer.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
     <Content Include="data\symbols.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="img\textanalyzer.ico" />
   </ItemGroup>
 
 </Project>
